# Local-Voice-to-Text-App

./: .gitignore  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: sync-icon.mjs
src/: App.tsx  overlay-main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  gpu.rs  inject.rs  lib.rs  models.rs  perf.rs  polish.rs  transcribe.rs  vad.rs
src/components/: HotkeyCapture.tsx  Layout.tsx  NeoButton.tsx  NeoCard.tsx  TitleBar.tsx  Waveform.tsx
src/hooks/: useModels.ts  useRecordingState.ts
src/lib/: api.ts
src/pages/: History.tsx  Home.tsx  Onboarding.tsx  Overlay.tsx  Settings.tsx
src/styles/: globals.css  tokens.css
