[package]
name = "vtt"
version = "0.1.0"
description = "Local voice-to-text dictation — private, offline, subscription-free"
authors = ["joerh"]
edition = "2021"

[lib]
name = "vtt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.16.0"
cpal = "0.17.3"
enigo = "0.6.1"
reqwest = { version = "0.13", features = ["stream", "rustls"] }
sysinfo = "0.38.4"
thiserror = "2.0.18"
parking_lot = "0.12.5"
directories = "6.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.32"
arboard = "3.6.1"

[features]
default = []
# Optional GPU acceleration (never required — Potato mode is CPU-only)
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
